# mini-c

./: .clang_complete  .gitignore  LICENSE  gramatica  main.cpp  makefile  mini-c.cabal  output  stack.yaml
app/: Main.hs
header/: ast.hpp  lexer.hpp  parser.hpp
src/: Ast.hs  Codegen.hs  Lexer.hs  Parser.hs  lexer.cpp  parser.cpp
