name:                mini-c
version:             0.1.0.0
synopsis:            Minic-c Compiler
description:         Please see README.md
homepage:            https://github.com/githubuser/mini-c#readme
license:             BSD3
license-file:        LICENSE
author:              Rafael Sá Menezes
maintainer:          rafa.sa.xp@gmail.com
copyright:           2016 Rafael Sá Menezes
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ast
                     , Lexer
                     , Codegen
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , llvm-general
  default-language:    Haskell2010

executable mini-c-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline
                     , mtl
                     , mini-c
  default-language:    Haskell2010

test-suite mini-c-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mini-c
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mini-c
